--- a/app/styles/navigation.module.css
+++ b/app/styles/navigation.module.css
@@ -1,10 +1,9 @@
 .nav {
-  background-color: #2d2d2d;
+  background-color: #e3f2fd;
   position: fixed;
-  width: 30%;
+  width: 100%;
   margin: 0 auto;
-  top: 20px;
-  border-radius: 50px;
+
   padding: 20px 0px;
   left: 50%;
   z-index: 10;
